--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -2,7 +2,7 @@ name: Fetch Tomcat Versions
 
 on:
   schedule:
-    - cron: '0 0 1 * *' # Runs at midnight on the 1st day of every month
+    - cron: '0 0 * * 0' # Runs at midnight on every sunday
 
 jobs:
   fetch_tomcat_versions:
