--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -2,7 +2,7 @@ name: Fetch Tomcat Versions
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # Runs at midnight on every sunday
+    - cron: '* * * * *' # Runs at midnight on every sunday
 
 jobs:
   fetch_tomcat_versions:
@@ -22,8 +22,8 @@ jobs:
           TOMCAT_VERSION=$(curl -s https://dlcdn.apache.org/tomcat/tomcat-${MAJOR_VERSION}/ | grep -oP 'v[0-9]+\.[0-9]+\.[0-9]+' | sort -V | tail -1 | tr -d 'v')
 
           # Update the shell script with the fetched values
-          echo "MAJOR_VERSION=${MAJOR_VERSION}" > tomcat_versions.env
-          echo "TOMCAT_VERSION=${TOMCAT_VERSION}" >> tomcat_versions.env
+          sed -i "3 c MAJOR_VERSION=${MAJOR_VERSION}"  tomcat.sh
+          sed -i "3 c TOMCAT_VERSION=${TOMCAT_VERSION}" tomcat.sh
 
       - name: Commit updated Tomcat versions
         run: |
