--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --local user.name "GitHub Actions"
           git config --local user.email "actions@github.com"
-          git add tomcat_versions.env
-          git commit -m "Update Tomcat versions"
+          git add tomcat.sh
+          git commit -m "Update Tomcat.sh file"
           git push
