--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -2,7 +2,7 @@ name: Fetch Tomcat Versions
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # Runs at midnight on every sunday
+    - cron: '0 0 */10 * *' # Runs at midnight on every 10th day of previous job
 
 jobs:
   fetch_tomcat_versions:
