--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           MAJOR_VERSION=$(curl -s https://dlcdn.apache.org/tomcat/ | grep -oP 'tomcat-[0-9]+' | sort -V | tail -1 | grep -oP '[0-9]+')
           LATEST_VERSION=$(curl -s https://dlcdn.apache.org/tomcat/tomcat-${MAJOR_VERSION}/ | grep -oP 'v\d+\.\d+\.\d+.*?/' | sort -V | tail -n 1 | sed 's/\/$//')
-          echo "Latest Tomcat Version $TOMCAT_VERSION"
+          echo "Latest Tomcat Version: ${LATEST_VERSION}"
           TOMCAT_VERSION=$(echo "${LATEST_VERSION}" | cut -c 2-)
           # Update the shell script with the fetched values
           sed -i "5 c MAJOR_VERSION=${MAJOR_VERSION}"  tomcat.sh
