--- a/.github/workflows/fetch_tomcat_versions.yml
+++ b/.github/workflows/fetch_tomcat_versions.yml
@@ -2,7 +2,7 @@ name: Fetch Tomcat Versions
 
 on:
   schedule:
-    - cron: '* * * * *' # Runs at midnight on every 10th  day of the month
+    - cron: '0 0 */15 * *' # Runs at midnight on every 10th  day of the month
 
 jobs:
   fetch_tomcat_versions:
